--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 }
 
-.main-links{
+a{
     color: gray;
     font-size: 1.3em;
 }
@@ -34,11 +34,19 @@
     text-decoration: underline;
 }
 
-.projectDetail{
+.projectDetail, .about-text{
     font-size: 1.3em;
 }
 
 .screenshot{
     max-width:100%;
     max-height:100%;
+}
+
+.about-text-container{
+    height: 100%;
+}
+
+.about-text{
+    height: 100%;
 }
