--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 }
 
-a{
+.main-links, .social-links{
     color: gray;
     font-size: 1.3em;
 }
@@ -14,6 +14,10 @@ a{
 #name{
     cursor: default;
     margin: auto;
+}
+
+.social-links{
+    font-size: 2em;
 }
 
 /* .proj{
@@ -38,15 +42,21 @@ a{
     font-size: 1.3em;
 }
 
+#projectsContainer a{
+    font-size: 1em;
+    text-decoration: underline;
+}
+
+#moreProjectDetail1 a{
+    color: #000444;
+    text-decoration: underline;
+}
+
 .screenshot{
     max-width:100%;
     max-height:100%;
 }
 
 .about-text-container{
-    height: 100%;
-}
-
-.about-text{
-    height: 100%;
+    height: 80%;
 }
