Change to style

--- a/style.css
+++ b/style.css
@@ -65,9 +65,9 @@
     text-align: center;
 }
 
-/* .about-text-container{
+.about-text-container{
     height: 60%;
-} */
+}
 
 .skills img{
     max-width: 100px;
