--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@
   font-size: 1.3em;
 }
 
-/* .content-area {
-  visibility: hidden;
-} */
+a:hover {
+  color: #0f0f0f;
+}
 
 .name,
 .sub,
@@ -30,21 +30,9 @@
   font-size: 1rem;
 }
 
-/* .social-links{
-    font-size: 1.8em;
-} */
-
-/* .proj{
-    height: 35%;
-} */
-
 .proj-info {
   width: 70%;
 }
-
-/* .projImg{
-    width: 300px;
-} */
 
 .seeMore {
   cursor: pointer;
@@ -61,27 +49,20 @@
   text-decoration: underline;
 }
 
+.projectDetail a,
 #moreProjectDetail1 a {
-  color: #000444;
+  color: gray;
   text-decoration: underline;
 }
 
 .screenshot {
   max-width: 100%;
-  max-height: 100%;
+  object-fit: cover;
 }
-
-/* #about{
-    height: 90vh;
-} */
 
 #about-title {
   text-align: center;
 }
-
-/* .about-text-container{
-    height: 60%;
-} */
 
 #bookshelf {
   object-fit: cover;
